# kalshi_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  check_performance.py  opportunities.md  pyproject.toml  requirements.txt  settings.yaml
config/: markets.yaml  mode.yaml  risk.yaml  strategies.yaml
scripts/: backtest.py  promote_mode.py  soak_test.py
src/: __init__.py  main.py
src/core/: __init__.py  exceptions.py  mode.py  types.py
src/data/: __init__.py  odds_feed.py  polymarket_client.py
src/data/kalshi/: __init__.py  auth.py  client.py  rate_limiter.py  websocket.py
src/execution/: __init__.py  base.py  paper_broker.py
src/kalshi_bot/: bot.py  main.py
src/kalshi_bot/agents/: __init__.py  base.py
src/kalshi_bot/agents/consistency/: __init__.py  agent.py  constraint_checker.py  relationship_db.py
src/kalshi_bot/agents/economic/: __init__.py  agent.py  calendar.py  fred_client.py  indicator_model.py
src/kalshi_bot/agents/new_market/: __init__.py  agent.py  fair_value.py  market_tracker.py
src/kalshi_bot/agents/risk/: __init__.py  agent.py  concentration_monitor.py  correlation_tracker.py
src/kalshi_bot/agents/settlement_momentum/: __init__.py  agent.py  momentum_calc.py
src/kalshi_bot/agents/signal_tester/: __init__.py  agent.py  backtest_runner.py  signal_generator.py  signal_ranker.py
src/kalshi_bot/agents/weather/: __init__.py  agent.py  market_mapper.py  nws_client.py  probability_calc.py  weather_trader.py
src/kalshi_bot/analysis/: __init__.py  opportunity_exporter.py
src/kalshi_bot/api/: __init__.py  auth.py  client.py  rate_limiter.py  websocket.py
src/kalshi_bot/arbitrage/: __init__.py  detector.py
src/kalshi_bot/arbitrage/strategies/: __init__.py  base.py  cross_market.py  multi_outcome.py  single_market.py
src/kalshi_bot/backtesting/: __init__.py  data_loader.py  engine.py  metrics.py  position_tracker.py  report.py  simulator.py
src/kalshi_bot/config/: __init__.py  settings.py
src/kalshi_bot/core/: __init__.py  exceptions.py  types.py
src/kalshi_bot/dashboard/: __init__.py  app.py
src/kalshi_bot/execution/: __init__.py  executor.py  paper_trading.py  risk_model.py  vwap.py
src/kalshi_bot/ml/: __init__.py  data_collector.py  feature_engineer.py  historical_backfill.py  ml_strategy.py  outcome_tracker.py
src/kalshi_bot/ml/inference/: __init__.py  predictor.py
src/kalshi_bot/ml/models/: __init__.py  base.py  gradient_boost.py  logistic.py
src/kalshi_bot/ml/self_correction/: __init__.py  adjuster.py  disabler.py  monitor.py
src/kalshi_bot/ml/training/: __init__.py  scheduler.py  trainer.py
src/kalshi_bot/optimization/: __init__.py  bregman.py  frank_wolfe.py  ip_solver.py  kelly.py  marginal_polytope_fw.py  position_sizer.py
src/kalshi_bot/persistence/: __init__.py  database.py  models.py
src/kalshi_bot/persistence/migrations/: 001_initial.sql  002_ml_infrastructure.sql  (+2 more)
src/kalshi_bot/portfolio/: __init__.py  manager.py  position_monitor.py  profit_lock.py
src/kalshi_bot/risk/: __init__.py  circuit_breaker.py  limits.py  manager.py
src/kalshi_bot/utils/: __init__.py  logging.py  notifications.py
src/ledger/: __init__.py  database.py
src/ledger/migrations/: 001_foundation.sql
src/metrics/: __init__.py  brier.py  calibration_curve.py  performance.py
src/observability/: __init__.py  dashboard.py  logging.py
src/risk/: __init__.py  engine.py  kelly.py
src/strategies/: __init__.py  arbitrage.py  base.py  calibration.py  market_make.py  mean_reversion.py  weather.py
src/voting/: __init__.py  ensemble.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_execution_risk.py  test_ip_solver.py  test_marginal_polytope_fw.py  test_metrics.py  test_strategies.py  test_voting.py  test_vwap.py
tests/unit/execution/: test_paper_broker.py
tests/unit/risk/: test_engine.py  test_kelly.py
